refactoring of structure
