# model/detector.go
@@ -1,0 +1,7 @@
+package model
+
+type Detector struct {
+	ID     int
+	Name   string
+	Serial string
+}
